Well, that didn't work - see if detectApiLink false is enough